--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "@blockly/field-slider": "^4.0.4",
     "blockly": "^9.2.0",
     "bootstrap": "^5.3.0-alpha1",
-    "electron-squirrel-startup": "^1.0.0"
+    "chokidar": "^3.5.3",
+    "drag-drop": "^7.2.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "fs-extra": "^11.1.0",
+    "open": "^8.4.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.4",
