--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "formidable": "^2.1.1",
     "fs-extra": "^11.1.0",
+    "jquery": "^3.6.3",
     "open": "^8.4.0"
   },
   "devDependencies": {
