--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "lint": "echo \"No linting configured\""
   },
   "keywords": [],
+  "author": {
+    "name": "William Li",
+    "email": "williamhli0707@gmail.com"
+  },
   "contributors": [
     {
       "name": "William Li",
@@ -34,7 +38,8 @@
     "formidable": "^2.1.1",
     "fs-extra": "^11.1.0",
     "jquery": "^3.6.3",
-    "open": "^8.4.0"
+    "open": "^8.4.0",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.4",
