--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blockai",
   "productName": "blockai",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "My Electron application description",
   "main": "main.js",
   "scripts": {
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "dist": "electron-builder"
   },
   "keywords": [],
   "author": {
@@ -38,6 +39,7 @@
     "formidable": "^2.1.1",
     "fs-extra": "^11.1.0",
     "jquery": "^3.6.3",
+    "node-abi": "^3.33.0",
     "open": "^8.4.0",
     "sharp": "^0.31.3"
   },
@@ -47,6 +49,19 @@
     "@electron-forge/maker-rpm": "^6.0.4",
     "@electron-forge/maker-squirrel": "^6.0.4",
     "@electron-forge/maker-zip": "^6.0.4",
-    "electron": "22.0.0"
+    "electron": "^23.0.0",
+    "electron-builder": "^24.0.0"
+  },
+  "build": {
+    "appId": "com.electron.blockai",
+    "productName": "BlockAI",
+    "asar": false,
+    "mac": {
+      "target": [
+        "zip"
+      ],
+      "hardenedRuntime": false,
+      "entitlements": "entitlements.mac.plist"
+    }
   }
 }
