--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "formidable": "^2.1.1",
     "fs-extra": "^11.1.0",
     "jquery": "^3.6.3",
+    "jsdom": "^21.1.1",
     "open": "^8.4.0",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "xhr2": "^0.2.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.4",
@@ -47,6 +49,7 @@
     "@electron-forge/maker-rpm": "^6.0.4",
     "@electron-forge/maker-squirrel": "^6.0.4",
     "@electron-forge/maker-zip": "^6.0.4",
-    "electron": "22.0.0"
+    "electron": "22.0.0",
+    "electron-rebuild": "^3.2.9"
   }
 }
