--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chokidar": "^3.5.3",
     "drag-drop": "^7.2.0",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.1.0",
     "formidable": "^2.1.1",
     "fs-extra": "^11.1.0",
     "jquery": "^3.6.3",
