workspace will now save when closed, made dense block not allow 0 neurons

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@electron-forge/maker-rpm": "^6.0.4",
     "@electron-forge/maker-squirrel": "^6.0.4",
     "@electron-forge/maker-zip": "^6.0.4",
-    "electron-rebuild": "^3.2.9"
+    "electron-rebuild": "^3.2.9",
     "electron": "^23.0.0",
     "electron-builder": "^24.0.0"
   },
